--- a/.example.env
+++ b/.example.env
@@ -4,6 +4,7 @@ DISCORD_BOT_TOKEN=''
 DISCORD_BOT_ID=''
 DISCORD_PRINCIPAL_GUILD_ID=''
 DISCORD_DEV_ID=''
+DISCORD_PRINCIPAL_GUILD_WEBHOOK=''
 
 #Database
 
